--- a/src/main/swagger/healthcare/v1/healthcare-v1.yaml
+++ b/src/main/swagger/healthcare/v1/healthcare-v1.yaml
@@ -7,4 +7,7 @@ info:
     url: https://www.apache.org/licenses/LICENSE-2.0.html
 paths: {}
 definitions:
-  {}
+  NihdiNumber:
+    description: Identification number attributed by NIHDI (RIZIV-INAMI) to health care providers in Belgium within the framework of the compulsory health insurance
+    type: string
+    pattern: '^\d{8}$'
